finalized 2.3 for aine

--- a/prosessi.tex
+++ b/prosessi.tex
@@ -151,7 +151,7 @@ metodiin.
 
 On erityisen tärkeää tuoda ongelmanratkaisuprosessi esille opetuksessa.
 Oppikirjoista ei voi opetella tätä vaan tarvitaan vaihtoehtoisia
-oppimateriaaleja \cite{Bennedsen:2008}.
+oppimateriaaleja \cite{Bennedsen:2008}. Koko luku käsittelee tätä lähdettä.
 
 Liitutaulun käyttö on yleistä matematiikan opetuksessa ja sitä voi hyödyntää
 samoin ohjelmoinnin opetuksessa. Opiskelijat ovat mukana kehityksessä, joten he
@@ -168,12 +168,12 @@ Teknologia mahdollistaa tarvittavat olosuhteet. Liitutaulun käytössä opiskeli
 otetaan mukaan ja piirtoheitinkalvoihin saa tarpeeksi isoja kokonaisuuksia.
 Tietokone ja videotykki mahdollistavat kehitystyökalujen käytön luennolla,
 jolloin opiskelijat näkevät oikeanlaista ohjelmointia ja voivat itse vaikuttaa
-lopputulokseen. Kuitenkin luento kestää vain määrätyn ajan, joten kauhean
-monimutkaisia ohjelmia ei voi esittää. Myöskin ohjelmointiprosessin näkee vain
-kerran eikä siihen voi palata kuten esimerkiksi kirjan esimerkkiin, jonka voi
-lukea monta kertaa.
+lopputulokseen. Kuitenkin luento kestää vain määrätyn ajan, joten kovin
+monimutkaisia ohjelmia ei voida esittää. Lisäksi opiskelija näkee
+ohjelmointiprosessin vain kerran eikä hän voi palata siihen kuten esimerkiksi
+kirjan esimerkkiin, jonka voi lukea monta kertaa.
 
-Onneksi nykyään luennot on mahdollista nauhottaa, jolloin opiskelijat voivat
+Onneksi nykyään luennot on mahdollista nauhoittaa, jolloin opiskelijat voivat
 katsoa luentovideon moneen kertaan, kunnes ymmärtävät miten ohjelmointiprosessi
 toimi luennolla esitetyssä ongelmassa. Tämän jälkeen heidän on helppo palata
 tarkistamaan kehitysprosessin eteneminen, kun tehtäviä tehdessä tarvitsevat
@@ -181,8 +181,9 @@ apua. Eri ihmisillä kestää eri aika sisäistää luennon asia, joten
 kertausmahdollisuus on eduksi.
 
 On tärkeää, että videoissa on sisällysluettelo, jolloin opiskelijat löytävät
-helposti tarvitseman kohdan videosta. Mitä helpommin videoilta saa halutun
-tiedon, sitä vähemmän kirjallisesta materiaalista on tarve etsiä tiettyä asiaa.
+helposti tarvitsemansa kohdan videosta. Mitä helpommin opiskelija saa videoilta
+etsimänsä tiedon, sitä vähemmän kirjallisesta materiaalista on tarve etsiä
+tiettyä asiaa.
 
 Liian käsikirjoitetut luennot ovat huonoja, sillä silloin tilanne ei vastaa
 todellisuutta ja opiskelijat voivat tylsistyä. Sopiva määrä improvisointia ja
@@ -191,9 +192,11 @@ luontaista tehdä välillä virheitä. Myös kääntäjän antamia virheilmoituk
 syytä käsitellä, jotta ymmärretään, mistä virheet johtuvat.
 
 Luennoilla on tärkeä näyttää myös refaktorointia. Aluksi tuetettu ratkaisu tekee
-asiansa, mutta se ei välttämättä ole puhtain mahdollinen. Refaktorointi on
-yleinen osa ohjelmointia, joten se tulee tuoda siten myös esille ja näyttää
-miten refaktoroidaan.
+asiansa, mutta se ei välttämättä ole hyvää koodia. Refaktorointi on yleinen osa
+ohjelmointia, joten se tulee tuoda siten myös esille ja näyttää miten
+refaktoroidaan.
+
+% TODO: selitä hyvä koodi
 
 Olemassa olevan koodin lukeminen ja muokkaaminen ovat tavallisimpia tehtäviä
 kelle tahansa ohjelmoijalle \cite{Kolling:2008}. Oppimisen kannalta on suotavaa
