finalized XA for aine

--- a/xa.tex
+++ b/xa.tex
@@ -1,39 +1,46 @@
 \section{Kisällioppiminen}
 
 Extreme Apprenticeship (XA) on Helsingin yliopiston tietojenkäsittelytieteen
-laitoksella lanseerattu versio ohjelmoinnin kisällioppimisesta
+laitoksella kehitelty versio ohjelmoinnin kisällioppimisesta
 \cite{Vihavainen:2011:EAM:1953163.1953196}. Kisällioppimisesta on useita eri
 muotoja, mutta XA:n pohjimmainen tavoite on todella paljon tehtäviä ja vähän
-luentoja.
+luentoja. % TODO: selkeytä tutkielmassa
 
-Ohjelmointia voi oppia vain ohjelmoimalla, koska ohjelmointiprosessia ei voi
-oppia oppikirjasta lukemalla. Tässä XA on onnistunut todella hyvin. Tehtäviä on
-tosi monta ja ne täydentävät toisiaan. Toisaalta tehtävät on valmiiksi pilkottu
+Ohjelmointia voi oppia vain ohjelmoimalla, eikä ohjelmointiprosessia voi oppia
+oppikirjasta lukemalla. Tässä XA on onnistunut todella hyvin. Tehtäviä on tosi
+monta ja ne täydentävät toisiaan. Toisaalta tehtävät on valmiiksi pilkottu
 pieniksi ongelmiksi, joten opiskelijat eivät pääse itse pilkkomaan alkuperäisiä
 ongelmia. Heidän on myöskin vaikea lähteä pilkkomaan pienempiä ongelmia vielä
-pienemmiksi.
+pienemmiksi. % TODO: selkeytä tutkielmassa: miksi?
 
 Pienien tehtävien taustalla on yksikkötestauksen helpottaminen. Tehtäviä varten
 on palautusautomaatti, joka pohjautuu yksikkötesteihin. Yksikkötestit tuovat
-opiskelijoille selkeän palautteen, toimiiko heidän ohjelmansa, ja
-tutkimustuloksia niiden hyödyllisyydestä opetuksessa on esitetty
-\cite{Bennedsen:2008}.
+opiskelijoille palautteen, toimiiko heidän ohjelmansa. Tutkimustuloksia niiden
+hyödyllisyydestä opetuksessa on esitetty \cite{Bennedsen:2008}.
+% TODO: millaisia tuloksia?
 
-Luentojen suhteen XA on liian raju. Ainoa tilaisuus, missä opiskelijoilla on
-mahdollisuus nähdä ja kysyä ohjelmointiprosessista, kisällioppimisessa on
-luento. Jos luentoja ei ole, niin opiskelijat kehittävät oman prosessinsa, joka
-aikaisemmin todettiin kohtalokkaaksi.
+Luentojen suhteen XA on liian jyrkkä. Kisällioppimisessa ainoa tilaisuus, jossa
+opiskelijoilla on mahdollisuus nähdä ja kysyä varsinaisesta
+ohjelmointiprosessista, on luento. Jos luentoja ei ole, opiskelijat kehittävät
+oman prosessinsa, mikä aikaisemmin todettiin kohtalokkaaksi.
 
-Pajatilaisuuksissa on tärkeä seurata opiskelijoiden yleistä työskentelyä. On
-tärkeä selvittää, miten päädyttiin kyseiseen ongelmatilanteeseen, koska
-ongelmatilanteissa opiskelijat kysyvät apua. Myös toimivissa tilanteissa on
-tärkeä kysyä, miksi on toteutettu valitulla tavalla.
+% TODO: vaihtoehtoiset opetustavat
+
+Kisällioppimisessa järjestetään pajatilaisuuksia, joissa opiskelijat tekevät
+tehtäviä ja voivat kysellä ohjaajilta apua. Pajatilaisuuksissa on tärkeä seurata
+opiskelijoiden työskentelyä. Kun ongelmatilanteissa opiskelijat kysyvät apua, on
+tärkeä selvittää, miten päädyttiin kyseiseen ongelmatilanteeseen. Täten ohjaaja
+pystyy antamaan opiskelijalle suoraa palautetta, jonka pohjalta opiskelija voi
+jatkossa välttää samankaltaisen ongelmatilateen. Myös toimivissa tilanteissa on
+tärkeä kysyä, miksi on toteutettu valitulla tavalla. Tällä kysymysellä on
+tarkoitus herättää ajatus ratkaisun selkeydestä ja refaktoroinnista.
 
 Refaktorointi on syytä ottaa esille pajatilanteessa. Tehtävien pohjautuessa
 toisiinsa, on tärkeä refaktoroida välillä. Tällöin uusien ominaisuuksien tuonti
-vanhojen rinnalle on puhdasta ja vaivatonta.
+vanhojen rinnalle on helpompaa.
 
-Kaksisuuntainen palaute on mahdollista kisälliopetuksessa. Opiskelija saa
-vastauksen kysymyksiinsä ja ohjaajat saavat tietoa eri asioiden sisäistämisestä.
-Tämä on erityisen tärkeä asia luentoja muodostaessa, sillä silloin voi
-palautteen pohjalta muodostaa entistä antoisampia luentoja.
+Kaksisuuntainen palaute on mahdollista kisälliopetuksessa, sillä luennoija on
+yksi pajaohjaajista. Opiskelija saa vastauksen kysymyksiinsä ja ohjaajat saavat
+tietoa eri asioiden sisäistämisestä. Tämä on erityisen tärkeä asia luentoja
+muodostaessa, sillä silloin voi palautteen pohjalta muodostaa entistä
+antoisampia luentoja.
