finalized yhteenveto for aine

--- a/johtopaatos.tex
+++ b/johtopaatos.tex
@@ -1,9 +1,9 @@
 \section{Yhteenveto}
 
-Ohjelmoinnin opetuksessa on keskitytty kielenrakenteisiin ohjelmarakenteiden ja
-ongelmanratkaisuprosessin sijaan. Kisällioppiminen tuo tähän parannusta, mutta
-ei yksinään ratkaise kaikkea. Oikeanlaisilla tehtävillä ja ohjauksella
-pajatilanteesta saa täyden tehon irti.
+Ohjelmoinnin opetuksessa on aiemmin keskitytty kielen rakenteisiin
+ohjelmarakenteiden ja ongelmanratkaisuprosessin sijaan. Kisällioppiminen tuo
+tähän parannusta, mutta ei yksinään ratkaise kaikkea. Oikeanlaisilla tehtävillä
+ja ohjauksella pajatilanteesta saa paljon irti.
 
 Luentojen rooli on edelleen todella tärkeä. Luennoilla ei riitä, että esitellään
 ohjelmointirakenteet ja valmis ratkaisu. On tärkeää tuoda ilmi koko prosessi
