--- a/johdanto.tex
+++ b/johdanto.tex
@@ -12,9 +12,17 @@ Perinteisellä tavalla järjestetyllä kurssilla opiskelijat oppivat lähinnä
 ratkaisemaan tietyntyyppisiä tehtäviä eivätkä yleistä ongelmanratkaisua
 \cite{Gries:1974:WTI:953057.810447}. Valmiita ohjelmia esiteltäessä
 opiskelijoille syntyy kuva, että ohjelmat syntyvät yhdellä askeleella sopivia
-rakenteita yhdistelemällä, eikä ohjelman todellinen kehitysprosessi ilmene
+rakenteita yhdistelemällä; sen sijaan ohjelman todellinen kehitysprosessi ilmene
 opiskelijalle.  Seurauksena tästä on se, että opiskelijat ymmärtävät eri
 rakenteet, mutta eivät osaa luoda toimivaa ohjelmaa niitä yhdistelemällä.
+
+Ohjelmointiprosessin jäädessä piiloon, opiskelijat eivät pysty ratkaisemaan
+annettuja haasteita tai heille kehittyy oma prosessi
+\cite{Caspersen:2006:NPO:1176617.1176741}. Yleensä itsekehittynyt prosessi
+johtaa epäpäteviin ja huonosti suunniteltuihin lopputuloksiin. Tämä johtuu
+siitä, että yleensä opiskelija valitsee ensimmäisen mieleen tulleen ratkaisun.
+Moni on tyytyväinen löydettyään edes yhden ratkaisun eivätkä ole halukkaita
+tutustumaan muihin ratkaisuvaihtoehtoihin.
 
 Kursseilla käytetyt esimerkkiohjelmat ovat yleensä pieniä ja koostuvat
 yksinkertaisista askelista, mikä ei vastaa todellisuutta. Lisäksi ne opettavat
@@ -41,14 +49,6 @@ keskittymistä kielen rakenteisiin. Yksinkertainen Java ohjelma vaatii
 kohtuullisen paljon Javan omaa syntaksia. Täten kielen syntaksia on osattava
 kohtalainen määrä ennen kuin yleisiä ohjelmointirakenteita voi opettaa.
 
-Ohjelmointiprosessin jäädessä piiloon, opiskelijat eivät pysty ratkaisemaan
-annettuja haasteita tai heille kehittyy oma prosessi
-\cite{Caspersen:2006:NPO:1176617.1176741}. Yleensä itsekehittynyt prosessi
-johtaa epäpäteviin ja huonosti suunniteltuihin lopputuloksiin. Tämä johtuu
-siitä, että yleensä opiskelija valitsee ensimmäisen mieleen tulleen ratkaisun.
-Moni on tyytyväinen löydettyään edes yhden ratkaisun eivätkä ole halukkaita
-tutustumaan muihin ratkaisuvaihtoehtoihin.
-
 Ohjelmoinnin oppiminen ei saa olla ainoana tavoitteena vaan myös koodin laadun
 kehitys on tärkeää. Jos ohjelmointikursseilla opetetaan järjestelmällisyyteen
 pohjautuvaa ongelmanratkaisuprosessia (käsitellään luvussa
@@ -56,5 +56,7 @@ pohjautuvaa ongelmanratkaisuprosessia (käsitellään luvussa
 ainoastaan auta opiskelijoita kehittämään ratkaisuja vaan myös parantaa
 ratkaisujen laatua.
 
-Luvussa 2 tarkastellaan ongelmanratkaisuprosessia ja sen soveltamista
-ohjelmointiin. Luvussa 3 tarkastellaan kisällioppimista.
+Tässä työssä selvitetään miten ohjelmointiprosessia voidaan tuoda esille
+ohjelmoinnin opetuksessa. Luvussa 2 tarkastellaan ongelmanratkaisuprosessia ja
+sen soveltamista ohjelmointiin. Luvussa 3 tarkastellaan kisällioppimista ja
+miten se tukee ohjelmointiprosessin tuontia esille.
