--- a/xa.tex
+++ b/xa.tex
@@ -29,11 +29,12 @@ oman prosessinsa, mikä aikaisemmin todettiin kohtalokkaaksi.
 Kisällioppimisessa järjestetään pajatilaisuuksia, joissa opiskelijat tekevät
 tehtäviä ja voivat kysellä ohjaajilta apua. Pajatilaisuuksissa on tärkeä seurata
 opiskelijoiden työskentelyä. Kun ongelmatilanteissa opiskelijat kysyvät apua, on
-tärkeä selvittää, miten päädyttiin kyseiseen ongelmatilanteeseen. Täten ohjaaja
-pystyy antamaan opiskelijalle suoraa palautetta, jonka pohjalta opiskelija voi
-jatkossa välttää samankaltaisen ongelmatilateen. Myös toimivissa tilanteissa on
-tärkeä kysyä, miksi on toteutettu valitulla tavalla. Tällä kysymysellä on
-tarkoitus herättää ajatus ratkaisun selkeydestä ja refaktoroinnista.
+tärkeä selvittää, miten opiskelija päätyi kyseiseen ongelmatilanteeseen. Täten
+ohjaaja pystyy antamaan opiskelijalle suoraa palautetta, jonka pohjalta
+opiskelija voi jatkossa välttää samankaltaisen ongelmatilateen. Myös toimivissa
+tilanteissa on tärkeä kysyä, miksi ratkaisu on toteutettu valitulla tavalla.
+Tällä kysymysellä on tarkoitus herättää ajatus ratkaisun selkeydestä ja
+refaktoroinnista.
 
 Refaktorointi on syytä ottaa esille pajatilanteessa. Tehtävien pohjautuessa
 toisiinsa, on tärkeä refaktoroida välillä. Tällöin uusien ominaisuuksien tuonti
