--- a/thesis.bib
+++ b/thesis.bib
@@ -103,3 +103,13 @@
   url = {http://dx.doi.org/10.1007/978-3-540-77934-6_2},
   year = {2008}
 }
+
+@book{Martin:2008:CCH:1388398,
+  author = {Martin, Robert C.},
+  title = {Clean Code: A Handbook of Agile Software Craftsmanship},
+  year = {2008},
+  isbn = {0132350882, 9780132350884},
+  edition = {1},
+  publisher = {Prentice Hall PTR},
+  address = {Upper Saddle River, NJ, USA},
+}
