xa more specific

--- a/prosessi.tex
+++ b/prosessi.tex
@@ -180,9 +180,9 @@ Virheidenkäsittelyn tulee pysyä samana sovelluksen eri osissa. Testit
 määrittävät koodin ulkoisen rajapinnan, joten niillä on helppo valvoa
 virheidenkäsittelyä.
 
-Test-driven development (lyhyesti TDD) on yleinen tapa kirjoittaa koodia.
-TDD:ssä ensin kirjoitetaan testi, jonka jälkeen testin toteuttava koodi. Tällä
-tavoin meneteltynä koodista tulee hyvää ja testattua.
+Testivetoinen kehitys (lyhyesti TDD) on yleinen tapa kirjoittaa koodia. TDD:ssä
+ensin kirjoitetaan testi, jonka jälkeen testin toteuttava koodi. Tällä tavoin
+meneteltynä koodista tulee hyvää ja testattua.
 
 Suorituskyvyn tulee olla hyvä, mutta se ei saa tuoda mukanaan sekavuutta
 koodiin. Jotkut optimoinnit voivat olla todella rumia, joten ne on syytä jättää
