--- a/xa.tex
+++ b/xa.tex
@@ -2,29 +2,48 @@
 
 Extreme Apprenticeship (XA) on Helsingin yliopiston tietojenkäsittelytieteen
 laitoksella kehitelty versio ohjelmoinnin kisällioppimisesta
-\cite{Vihavainen:2011:EAM:1953163.1953196}. Kisällioppimisesta on useita eri
-muotoja, mutta XA:n pohjimmainen tavoite on todella paljon tehtäviä ja vähän
-luentoja. % TODO: selkeytä tutkielmassa
+\cite{Vihavainen:2011:EAM:1953163.1953196}. Ohjelmointi on suuressa osassa
+aktiiviseen oppimiseen pohjautuvissa metodeissa. Kisällioppimisessa pääpaino on
+prosessissa eikä lopullisessa tuotteessa.
+
+Kisällioppimisessa on kolme vaihetta: mallintaminen, oppimisen oikeaoppinen
+tukeminen ja häivytys. Mallintamisenvaiheessa opettaja antaa opiskelijalle
+konseptuaalisen mallin prosessista, eli esimerkein näyttää ohjelman tuottamisen
+alusta loppuun. Opettaja pohtii tehtävän kaikki vaiheet ääneen, joten
+opiskelijalle syntyy kuva, miten opettaja ratkaisi tehtävän askel askeleelta.
+
+Oppimisen oikeaoppinen tukeminen on pajassa tehtävien tekemistä kokeneempien
+opastuksessa. Opastajat auttavat opiskelijoita eteenpäin antamalla tarpeeksi
+vihjeitä, jotta opiskelija oivaltaa ratkaisun itse.
+
+Häivytysvaiheessa opiskelija alkaa itse hallitsemaan tehtäviä, joten tukemista
+voidaan vähentää. Opiskelija on sisäistänyt hyviä malleja, joita hyväksikäyttäen
+hän kehittää hyviä, toimivia ratkaisuja tehtäviin.
 
 Ohjelmointia voi oppia vain ohjelmoimalla, eikä ohjelmointiprosessia voi oppia
 oppikirjasta lukemalla. Tässä XA on onnistunut todella hyvin. Tehtäviä on tosi
 monta ja ne täydentävät toisiaan. Toisaalta tehtävät on valmiiksi pilkottu
 pieniksi ongelmiksi, joten opiskelijat eivät pääse itse pilkkomaan alkuperäisiä
 ongelmia. Heidän on myöskin vaikea lähteä pilkkomaan pienempiä ongelmia vielä
-pienemmiksi. % TODO: selkeytä tutkielmassa: miksi?
+pienemmiksi. Yksittäisen metodin toteuttaminen kelpaa yleensä ratkaisuksi, joten
+tehtävän suorittaminen ei vaadi pilkkomista, täten se helposti sivuutetaan.
 
 Pienien tehtävien taustalla on yksikkötestauksen helpottaminen. Tehtäviä varten
 on palautusautomaatti, joka pohjautuu yksikkötesteihin. Yksikkötestit tuovat
 opiskelijoille palautteen, toimiiko heidän ohjelmansa. Tutkimustuloksia niiden
-hyödyllisyydestä opetuksessa on esitetty \cite{Bennedsen:2008}.
-% TODO: millaisia tuloksia?
+hyödyllisyydestä opetuksessa on esitetty \cite{Bennedsen:2008}. Testien avulla
+opiskelija tietää, mitä ohjelmalta todellisuudessa halutaan.
 
-Luentojen suhteen XA on liian jyrkkä. Kisällioppimisessa ainoa tilaisuus, jossa
-opiskelijoilla on mahdollisuus nähdä ja kysyä varsinaisesta
+Puhtaassa XA:ssa halutaan minimoida luentojen määrä. Kisällioppimisessa ainoa
+tilaisuus, jossa opiskelijoilla on mahdollisuus nähdä ja kysyä varsinaisesta
 ohjelmointiprosessista, on luento. Jos luentoja ei ole, opiskelijat kehittävät
 oman prosessinsa, mikä aikaisemmin todettiin kohtalokkaaksi.
 
-% TODO: vaihtoehtoiset opetustavat
+Verkkokursseissa luennot on korvattu lyhyillä opetusvideoilla. Niiden tarkoitus
+on tuoda asia esille luentoa mukailevalla tavalla. Opetusvideot sopivat myös
+kurssille, jossa järjestetään luentoja. Videot ovat yksi keino lisää palata
+käsiteltyyn asiaan ja siinä näkyy prosessi toisin kuin kirjoitetussa
+materiaalissa.
 
 Kisällioppimisessa järjestetään pajatilaisuuksia, joissa opiskelijat tekevät
 tehtäviä ja voivat kysellä ohjaajilta apua. Pajatilaisuuksissa on tärkeä seurata
