conclusion and abstract

--- a/johtopaatos.tex
+++ b/johtopaatos.tex
@@ -5,14 +5,18 @@ ohjelmarakenteiden ja ongelmanratkaisuprosessin sijaan. Kisällioppiminen tuo
 tähän parannusta, mutta ei yksinään ratkaise kaikkea. Oikeanlaisilla tehtävillä
 ja ohjauksella pajatilanteesta saa paljon irti.
 
+Hyvä koodi on tärkeä osa ohjelmointia. Se sisältää piirteitä eri ohjelmointiin
+liittyvistä ongelmanratkaisuprosesseista. Tämä on toisiaan ruokkiva ympyrä,
+josta on syytä pitää kiinni.
+
 Luentojen rooli on edelleen todella tärkeä. Luennoilla ei riitä, että esitellään
 ohjelmointirakenteet ja valmis ratkaisu. On tärkeää tuoda ilmi koko prosessi
 ongelman analysoinnista oikeiden rakenteiden valitsemiseen ja valmiin ohjelman
 saamiseen usean refaktorointikierroksen jälkeen valmiiksi.
 
-Luennot on tärkeä videoida, jotta niihin voi palata jälkikäteen ja kerrata
-luennon asiat, kunnes ne ovat selviä. Eri ihmisillä kestää eri aika sisäistää
-asia ja omaan tahtiin kertaaminen on tällöin eduksi.
+Videot ovat tärkeä lisä materiaaliin. Niihin voi palata tehtäviä tehdessä ja
+niissä saa korostettua ja näytettyä asioita, joihin kirjallinen materiaali ei
+kykene.
 
 Kaksisuuntainen palaute on tärkeää opintojen suunnittelussa. Opiskelija saa
 palautetta edistymisestään ja ohjaaja saa tiedon asioiden sisäistämisestä.
