--- a/thesis.tex
+++ b/thesis.tex
@@ -8,7 +8,8 @@
 \faculty{Matemaattis-luonnontieteellinen}
 \department{Tietojenkäsittelytieteen laitos}
 \subject{Tietojenkäsittelytiede}
-\keywords{Ohjelmointiprosessi}
+\keywords{Ohjelmointiprosessi, opetus, hyvä koodi, videot, kisällioppiminen,
+pajaopetus}
 
 \numberofpagesinformation{\numberofpages\ sivua}
 
@@ -19,7 +20,14 @@
 \doublespacing
 
 \begin{abstract}
-Tiivistelmä
+Ohjelmoinnin opetuksessa on pitkään mietitty ongelmanratkaisuprosessia ja miten
+sen voi tuoda mukaan osaksi ohjelmoinnin opetusta. Tämä tutkielma käy aluksi
+läpi miten ohjelmointia on opetettu ajan saatossa, selvittää mitä hyviä ja
+huonoja puolia eri tavoissa on ollut. Käydään lävitse yleistä
+ongelmanratkaisuprosessia ja sen soveltamista ohjelmointiin. Miten
+kisällioppiminen toimii mahdollistajana hyvälle ohjelmoinnin opetukselle.
+Millaista ohjelmoinnin opetuksen tulee olla käytetyn materiaalin ja sisällön
+osalta.
 \end{abstract}
 
 \mytableofcontents
